--- a/final/app/src/main/res/layout/activity_newsholder.xml
+++ b/final/app/src/main/res/layout/activity_newsholder.xml
@@ -1,40 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="300dp"
     android:orientation="vertical">
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
-        <ImageView
-            android:id="@+id/ImageView_Newsimage1"
+        android:layout_height="match_parent"
+        card_view:cardCornerRadius="4dp"
+        android:layout_margin="12dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/user"
-            android:background="@null"
-            />
+            android:layout_height="200dp">
+            <ImageView
+                android:id="@+id/ImageView_News_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/user"
+                android:background="@null"
+                />
+            <TextView
+                android:id="@+id/TextView_newsTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:background="#70000000"
+                android:textColor="#B01EC6"
+                android:textStyle="bold"
+                android:text="Text" />
+        </RelativeLayout>
+
         <TextView
-            android:id="@+id/TextView_newsTextview1"
+            android:id="@+id/TextView_newsContent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:background="#70000000"
-            android:textColor="#B01EC6"
-            android:textStyle="bold"
-            android:text="Text" />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/TextView_newsTextview2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="text"
-        android:paddingRight="6dp"
-        android:paddingLeft="6dp"
-        android:textSize="12dp"
-        android:ellipsize="end"
-        />
-
+            android:layout_height="50dp"
+            android:text="text"
+            android:paddingRight="6dp"
+            android:paddingLeft="6dp"
+            android:textSize="12dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            />
+    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
